--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -102,7 +102,7 @@
 				<li class="process__item">
 					<span class="process__number"><i class="fas fa-cogs"></i></span>
 					<span class="process__title">Développement</span>
-					<span class="process__subtitle">Mon équipe de développement transforme la stratégie en réalité</span>
+					<span class="process__subtitle">Je développe, transforme la stratégie en réalité</span>
 				</li>
 				<li class="process__item">
 					<span class="process__number"><i class="fas fa-check-circle"></i></span>
