changed gtag into head and edited twig

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -191,7 +191,8 @@
 				<div id="accordion">
 					<p class="text-center mb-4">Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre. Ne laissez pas les obstacles vous décourager. Au contraire, laissez-moi vous guider vers des solutions brillantes qui illuminent votre parcours.</p>
 					<p class="d-flex flex-wrap align-items-center justify-content-center">
-						<a class="btn btn-primary btn-lg font-weight-bold" href="{{ url('front_devis_new') }}">Osez l'illumination technique</a>
+						{#<a class="btn btn-primary btn-lg font-weight-bold" href="{{ url('front_project') }}">Voir mes réalisations</a>#}
+
 					</p>
 				</div>
 			</div>
