edited front and added image + removed purpose from nav

--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -74,6 +74,12 @@
     .button_home a{
         margin-top: 10px;
     }
+    .no-card-mobile span {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 }
 
 #accept-cookies {
