--- a/templates/front/includes/footer.html.twig
+++ b/templates/front/includes/footer.html.twig
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="site-footer clearfix">
+<footer class="site-footer" id="footer-site">
     <div class="footer-social">
         <ul class="footer-social-links">
             <li>
@@ -11,17 +11,25 @@
             </li>
 
             {#<li>
-                <a href="{{ url('front_project') }}" target="_blank">Mes réalisations</a>
-            </li>#}
+								<a href="{{ url('front_project') }}" target="_self">Mes réalisations</a>
+							</li>#}
         </ul>
     </div>
 
     <div class="footer-copyrights">
-        <p>
-            Walid BELBECHE © 2023
-            <br>
-            Vos données sont chiffrées de bout à bout, aucune exploitation de ces derniers ne sera faite par des tiers.
-        </p>
+        <div class="footer-legales ml-auto">
+            &copy; ScriptZenIT - 2023
+            <ul class="footer-social-links">
+                <li>
+                    <a href="{{  url('front_mentions') }}">Mentions légales</a>
+                </li>
+
+                <li>
+                    <a href="{{ url('front_conditions') }}">Conditions générales</a>
+                </li>
+                {#<li><a href="#Données personnelles">Données personnelles</a></li>#}
+            </ul>
+        </div>
     </div>
 </footer>
 <!-- /Footer -->
