test for mobile

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -14,17 +14,16 @@
 	</div>
 
 	{# Hero #}
-	<section class="section-header section-sm bg-secondary text-white vh-100">
+	<section class="section-header text-white vh-100 home_background">
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
-				<div class="col-12 col-md-7 col-lg-6 text-center text-md-left intro">
-					<h1 class="display-2 mb-4">Agence web <br> <span class="inline-block" style="background-color: dodgerblue;">Basée dans la Nièvre</span></h1>
-					<p class="lead mb-4 text-muted">Grâce à mon expertise en développement Web, je vous accompagne dans
+				<div class="col-12 col-md-12 col-lg-12 text-md-left intro">
+					<h1 class="display-2 mb-4 text-center">Agence web <br> <span class="inline-block" style="background-color: dodgerblue;">Basée dans la Nièvre</span></h1>
+					<p class="lead mb-4 text-muted text-center">Grâce à mon expertise en développement Web, je vous accompagne dans
 						la création d'un site professionnel et attractif. Cependant, une conception
-						exceptionnelle ne se limite pas à la première étape. C'est pourquoi je mets en place un suivi
-						dédié, disponible 7 jours sur 7, pour vous assurer que votre présence en ligne prospère de manière continue.
+						exceptionnelle ne se limite pas à la première étape.
 					</p>
-					<div class="flex-sm-column button_home">
+					<div class="flex-sm-column button_home justify-content-center" style="text-align: center;">
 						<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 inline-block">Obtenir un suivi 7j/7 <span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
 						<a href="#agence" class="btn btn-danger mr-3 animate-up-2 inline-block">Découvrir l'agence<span class="ml-2"><span class="fas fa-arrow-down"></span></span></a><br>
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" class="bi bi-check2-circle" viewBox="0 0 16 16">
@@ -34,7 +33,6 @@
 							Aucune carte de crédit n'est requise
 					</div>
 				</div>
-				<div class="col-12 col-md-5 d-none d-md-block text-center"><img src="{{ asset('img/support/support1.svg') }}" alt="scriptzenit" height="100%" width="100%"></div>
 			</div>
 				<!-- Clients Slider -->
 
