--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -39,6 +39,13 @@
     margin-bottom: 2.5%;
 }
 
+.home_background{
+    background-image: url('../../../img/home.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+}
+
 #cookie-consent {
     position: fixed;       /* Flottant en bas de la page */
     bottom: 0;
@@ -50,6 +57,12 @@
     font-size: 14px;      /* Taille du texte */
     z-index: 1000;        /* Assure que le bandeau est au-dessus des autres éléments */
     text-align: center;   /* Centre le texte */
+}
+
+@media screen and (min-width: 1024px) {
+    .home_background{
+        padding-top: 9rem;
+    }
 }
 
 @media screen and (min-width: 200px) and (max-width: 1080px) {
@@ -73,6 +86,7 @@
     }
     .button_home a{
         margin-top: 10px;
+        text-align: center;
     }
     .no-card-mobile span {
         display: flex;
@@ -95,11 +109,12 @@
     border-radius: 4px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 922px) {
 
     /* Styles pour les écrans jusqu'à 767px de large (mode téléphone et tablette) */
     .logo img {
         display: none;
+        width:100%;
     }
 
     .logo-text {
